# bindsnet

./: .dockerignore  .gitignore  .gitignore copy  .pre-commit-config.yaml  .python-version   .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  bindsnet_ztl.yml  env_gpu.patch  mutability.py  network.pt  pyproject.toml  pythonpackage.yml  readthedocs.yml  requirements.txt  setup.py  test_arctangent_feature.py  test_pipeline_init.py  tmp_test_connections.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: black.yml  python-app.yml  pythonpackage.yml
bindsnet/: __init__.py  encoding.py  evaluation.py  main_pipeline.py  pipeline.py  utils.py
bindsnet/analysis/: __init__.py  dotTrace_plotter.py  pipeline_analysis.py  plotting.py  visualization.py  vsualization.py
bindsnet/conversion/: __init__.py  conversion.py  nodes.py  topology.py
bindsnet/datasets/: README.md  __init__.py  alov300.py  collate.py  contrastive_transforms.py  dataloader.py  davis.py  preprocess.py  spike_encoders.py  spoken_mnist.py  torchvision_wrapper.py
bindsnet/encoders/: __init__.py
bindsnet/encoding/: __init__.py  encoders.py  encodings.py  loaders.py  numenta.py
bindsnet/environment/: README.md  __init__.py  cue_reward.py  dot_simulator.py  environment.py  space_invaders.py  space_invaders_2.py
bindsnet/evaluation/: __init__.py  evaluation.py
bindsnet/global_config/: network_config.py
bindsnet/learning/: MCC_learning.py  __init__.py  learning.py  reward.py
bindsnet/models/: __init__.py  models.py
bindsnet/network/: __init__.py  connections.py  learning.py  monitors.py  network.py  nodes.py  topology (new).py  topology.py  topology_features.py  torch_utils.py  utils.py
bindsnet/pipeline/: __init__.py  action.py  base_pipeline.py  dataloader_pipeline.py  environment_pipeline.py  feedback.py  forward_forward_pipeline.py  pipeline_analysis.py
bindsnet/preprocessing/: __init__.py  preprocessing.py
bindsnet/rendering/: app.py  widgets.py
data/: get_MNIST.sh
docs/: .index.rst.swp  .readthedocs.yaml  .readthedocs.yml  .rst  Makefile  Makefile.old  bindsnet.datasets.rst  bindsnet.encoding.rst  bindsnet.evaluation.rst  bindsnet.learning.rst  bindsnet.network.rst  bindsnet.rst  conf.py  index.rst  installation.rst  make.bat  make.bat.old  modules.rst  pyproject.toml  quickstart.rst  requirements.txt
docs/source/: bindsnet.analysis.rst  bindsnet.conversion.rst  bindsnet.datasets.rst  bindsnet.encoding.rst  bindsnet.environment.rst  bindsnet.evaluation.rst  bindsnet.learning.rst  bindsnet.models.rst  bindsnet.network.rst  bindsnet.pipeline.rst  bindsnet.preprocessing.rst  bindsnet.rst  conf.py  guide.rst  index.rst  installation.rst  modules.rst  quickstart.rst
examples/: 2mnist_match.py  README.md  Simple test network.ipynb  benchmark_similar_to_brain2.py  eligibility_cartpole.py  eligibility_space_invaders.py  et_space_invaders.py  eth.py  eth_mnist.py  eth_spokenMNIST.py  freq_match.py  lr.py  lsm.py  main_pipeline.py  mnist_env_test.py  mnist_match.py  modified_freq_match.py  space_invaders.py  stress.py  test_network_monitor.py
examples/XOR/: experiments.sh  get_learning_curve.sh  mstdp.py
examples/asteroids/: random_network_baseline.py
examples/benchmark/: annarchy.py  benchmark.py  gpu_annarchy.py  lowering_precision.py  plot_benchmark.py  sparse_vs_dense_tensors.py
examples/breakout/: breakout.py  breakout_stdp.py  breakout_stdp_right.py  play_breakout_from_ANN.py  random_baseline.py  random_network_baseline.py
examples/cart_pole/: cart_pole.py
examples/cartpole/: minimal_cartpole.py
examples/cifar10/: cifar10_env.py  cifar10_env_test.py  cifar10_reservoir.py  minimal_cifar10.py  minimal_reservoir.py  minimal_supervised_cifar10.py  rank_order_cifar10.py  supervised_cifar10.py
examples/datasets/: Davis.py  conv.py  davis.py  spoken_mnist.py
examples/dosidicus/: network.py
examples/dotTracing/: dot_tracing.py
examples/goturn/: ann_train.py  boundingbox.py
examples/mnist/: .evaluate_plot.py.swp  2mnist_match.py  FFsnnBindsnet_mnist.py  FFsnn_mnist  FFsnn_mnist.py  MCC_reservoir.py  SOM_LM-SNNs.py  assign_labels.pt  batch_conv_mnist.py  batch_eth_mnist.py  conv1d_MNIST.py  conv3d_MNIST.py  conv_mnist.py  details_exp_1.pt  details_exp_10.pt  details_exp_11.pt  details_exp_12.pt  details_exp_13.pt  details_exp_15.pt  details_exp_2.pt  details_exp_3.pt  details_exp_4.pt  details_exp_5.pt  details_exp_6.pt  details_exp_7.pt  details_exp_8.pt  details_exp_9.pt  eth_mnist.py  eth_ngram_mnist.py  evaluate.py  evaluate_plot.py  evaluate_plot_sacha.py  interro_spikes.py  loc1d_mnist.py  loc2d_mnist.py  loc3d_mnist.py  minimal_eth_mnist.py  minimal_mnist.py  minimal_reservoir.py  minimal_supervised_mnist.py  (+25 more)
examples/neuromorphic_datasets/: nmnist.py
examples/nids/: stdp_nids.py
examples/notebooks/: ETH replication.ipynb  LIFNodes vs. CurrentLIFNodes.ipynb  MNIST test.ipynb  Monitor test.ipynb  Simple test network.ipynb  plotting tests.ipynb
examples/rendering/: main.py  model.py
examples/space_invaders/: cartpole.py  et_space_invaders.Hananel.py  et_space_invaders.py  main_pipeline.py  minimal_space_invaders.py  random_baseline.py  random_network_baseline.py  space_invaders.py
examples/tensorboard/: tensorboard.py
logs/init/: events.out.tfevents.1656543178.TempWin  events.out.tfevents.1656548905.TempWin  events.out.tfevents.1673646087.Spike  events.out.tfevents.1673648326.Spike  events.out.tfevents.1678117372.Spike  events.out.tfevents.1682712186.Spike  events.out.tfevents.1687464074.Spike  events.out.tfevents.1687464505.Spike  events.out.tfevents.1687736499.Spike  events.out.tfevents.1694374827.Spike  events.out.tfevents.1694374969.Spike  events.out.tfevents.1694375010.Spike  events.out.tfevents.1700165624.Spike  events.out.tfevents.1703700212.Spike  events.out.tfevents.1711672057.Spike  events.out.tfevents.1711672140.Spike  events.out.tfevents.1711673241.Spike  events.out.tfevents.1711673760.Spike  events.out.tfevents.1711674764.Spike  (+9 more)
myprogram/: MNIST_RSTDP.py  MNIST_single_spike.py
(+68 files in other folders)
