[tool.poetry]
name = "bindsnet"
version = "0.3.2"
description = "Spiking neural networks for ML in Python"
authors = [ "Hananel Hazan <hananel@hazan.org.il>", "Daniel Saunders", "Darpan Sanghavi", "Hassaan Khan" ]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/BindsNET/bindsnet"
documentation = "https://bindsnet-docs.readthedocs.io/"
keywords = ["spiking", "neural", "networks", "pytorch"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
Cython = "^0.29.33"
torch = [
     {version = "2.2.2", platform = "darwin"},
     {version = "2.2.2", platform = "linux", source = "torch+cu118"},
     {version = "2.2.2", platform = "win32", source = "torch+cu118"},
     {version = "2.2.2", platform = "win_amd64", source = "torch+cu118"},
 ]
torchvision = [
     {version = "0.17.2", platform = "darwin"},
     {version = "0.17.2", platform = "linux", source = "torch+cu118"},
     {version = "0.17.2", platform = "win32", source = "torch+cu118"},
     {version = "0.17.2", platform = "win_amd64", source = "torch+cu118"},
 ]
torchaudio = [
     {version = "2.2.2", platform = "darwin"},
     {version = "2.2.2", platform = "linux", source = "torch+cu118"},
     {version = "2.2.2", platform = "win32", source = "torch+cu118"},
     {version = "2.2.2", platform = "win_amd64", source = "torch+cu118"},
 ]
tensorboardX = "^2.6.2.2"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
gymnasium = {extras = ["atari", "accept-rom-license"], version = "^0.29.1"}
scikit-build = "^0.17.6"
scikit-image = "^0.21.0"
scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"
pandas = "^2.0.2"
foolbox = "^3.3.3"

[[tool.poetry.source]]
 name = "torch+cu118"
 url = "https://download.pytorch.org/whl/cu118"
 priority = "explicit"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pre-commit = "^2.14.0"
notebook = "^6.4.12"
jupyterlab = "^3.4.5"
isort = "^5.9.3"
black = "^23.1.0"
autoflake = "^2.0.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["bindsnet", "test"]

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.github
  | build
  | dist
  | BindsNET.egg-info
  | notebooks
  | data
  | logs
  )/
'''
